First update setup and install kubernetes playbook

--- a/kubeinst/kubeinst.yml
+++ b/kubeinst/kubeinst.yml
@@ -1,17 +1,14 @@
 - name: Set up common configurations
-  hosts: all
-  become: yes
+  hosts: main
   roles:
     - common
 
 - name: Configure master node
   hosts: master
-  become: yes
   roles:
     - master
 
 - name: Configure worker nodes
   hosts: workers
-  become: yes
   roles:
     - workers
