--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -5,13 +5,17 @@
     ansible_user: vagrant
     kube_nodes:
       - ip: "192.168.121.10"
-        hostname: "final-kube-master"
+        hostname: "kubes-master"
       - ip: "192.168.121.21"
-        hostname: "final-kube-node1"
+        hostname: "kubes-node1"
       - ip: "192.168.121.22"
-        hostname: "final-kube-node2"
+        hostname: "kubes-node2"
       - ip: "192.168.121.23"
-        hostname: "final-kube-setting-node"
+        hostname: "kubes-backup"
+      - ip: "192.168.121.24"
+        hostname: "kubes-argocd-node"
+      - ip: "192.168.121.25"
+        hostname: "kubes-ingress-controller"
   tasks:
     - name: Set /etc/hosts
       lineinfile:
@@ -32,16 +36,38 @@
           [etcd]
           {{ kube_nodes[0].hostname }} ansible_host={{ kube_nodes[0].ip }}
 
-          [workers]
+          [services]
           {{ kube_nodes[1].hostname }} ansible_host={{ kube_nodes[1].ip }}
           {{ kube_nodes[2].hostname }} ansible_host={{ kube_nodes[2].ip }}
           {{ kube_nodes[3].hostname }} ansible_host={{ kube_nodes[3].ip }}
 
+          [basic]
+          {{ kube_nodes[1].hostname }} ansible_host={{ kube_nodes[1].ip }}
+          {{ kube_nodes[2].hostname }} ansible_host={{ kube_nodes[2].ip }}
+
+          [backup]
+          {{ kube_nodes[3].hostname }} ansible_host={{ kube_nodes[3].ip }}
+
+          [argocd]
+          {{ kube_nodes[4].hostname }} ansible_host={{ kube_nodes[4].ip }}
+
+          [ingress-controller]
+          {{ kube_nodes[5].hostname }} ansible_host={{ kube_nodes[5].ip }}
+
+          [workers:children]
+          basic
+          argocd
+          ingress-controller
+
+          [main:children]
+          master
+          workers
+
           [all:vars]
           ansible_python_interpreter=/usr/bin/python3
       loop:
-        - "{{ ansible_env.HOME }}/project/kubeinst/inventory"
-        - "{{ ansible_env.HOME }}/project/setup/inventory"
+        - "{{ ansible_env.HOME }}/Automation/kubeinst/inventory"
+        - "{{ ansible_env.HOME }}/Automation/setup/inventory"
         
     - name: Create ansible.cfg file
       blockinfile:
@@ -57,8 +83,8 @@
           become_method = sudo
           become_ask_pass = false
       loop:
-        - "{{ ansible_env.HOME }}/project/kubeinst/ansible.cfg"
-        - "{{ ansible_env.HOME }}/project/setup/ansible.cfg"
+        - "{{ ansible_env.HOME }}/Automation/kubeinst/ansible.cfg"
+        - "{{ ansible_env.HOME }}/Automation/setup/ansible.cfg"
 
     - name: Install sshpass
       apt:
