--- a/kubeinst/kubeinst.yml
+++ b/kubeinst/kubeinst.yml
@@ -1,14 +1,23 @@
 - name: Set up common configurations
-  hosts: main
+  hosts: all
+  become: yes
   roles:
     - common
 
 - name: Configure master node
   hosts: master
+  become: yes
   roles:
     - master
 
-- name: Configure worker nodes
-  hosts: workers
+- name: Configure controller nodes
+  hosts: controllers
+  become: yes
   roles:
-    - workers
+    - controllers
+
+- name: Configure service nodes
+  hosts: services
+  become: yes
+  roles:
+    - services
