--- a/setup/roles/ufw/vars/main.yml
+++ b/setup/roles/ufw/vars/main.yml
@@ -3,6 +3,9 @@ ufw_rules:
   - { port: 6443, protocol: tcp }    # Kubernetes API
   - { port: 8472, protocol: udp }   # Flannel
   - { port: 4789, protocol: udp }   # Flannel
+  - { port: 179, protocol: tcp }     # calico bgp
+  - { port: 2379, protocol: tcp }    # etcd
+  - { port: 2380, protocol: tcp }    # etcd
 
   # Flask 관련
   - { port: 5000, protocol: tcp }  # Flask 기본 포트
